--- a/translations/de/LC_MESSAGES/messages.po
+++ b/translations/de/LC_MESSAGES/messages.po
@@ -2,13 +2,11 @@
 # Copyright (C) 2015 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
-#
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2015-05-23 12:25+0200\n"
+"POT-Creation-Date: 2015-05-24 17:46+0200\n"
 "PO-Revision-Date: 2015-05-23 12:26+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: de <LL@li.org>\n"
@@ -18,10 +16,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
 
-#: templates/login.html:9
-msgid "Anmelden"
-msgstr ""
-
-#: templates/login.html:24 templates/login.html:34
-msgid "Anmelden"
-msgstr ""
+#: templates/login.html:9 templates/login.html:24 templates/login.html:34
+msgid "Sign in"
+msgstr "Anmelden"
